--- a/hello-spring/hello-spring/build.gradle
+++ b/hello-spring/hello-spring/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.10.BUILD-SNAPSHOT'
+	id 'org.springframework.boot' version '2.2.10.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 }
@@ -17,8 +17,6 @@ configurations {
 
 repositories {
 	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
-	maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
