Saturday the 31st of October 2020

--- a/coding-events/coding-events/src/main/resources/application.properties
+++ b/coding-events/coding-events/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
-spring.datasource.username=coding_events
-spring.datasource.password=sighmahn*0042
+spring.datasource.username=${APP_USERNAME}
+spring.datasource.password=${APP_PASSWORD}
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
